// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render BookList component GraphQL error 1`] = `
<div>
  <p>
    Error -.-
  </p>
</div>
`;

exports[`Render BookList component Loading state 1`] = `
<div>
  <p>
    Loading list of books ...
  </p>
</div>
`;

exports[`Render BookList component Network error 1`] = `
<div>
  <p>
    Error -.-
  </p>
</div>
`;

exports[`Render BookList component Sucess state 1`] = `
<div>
  <div
    class="component"
  >
    <a
      href="/"
    >
      <img
        alt="Return button"
        class="home-button"
        src=""
      />
    </a>
    <div
      class="grid-container"
    >
      <a
        href="/book/details/1"
      >
        <div
          class="grid-container__block"
        >
          <div
            class="grid-container__block_property"
          >
            <p
              class="grid-container__block_property_header"
            >
              Title:
            </p>
            <p
              class="grid-container__block_property_value"
            >
              Book1
            </p>
          </div>
          <div
            class="grid-container__block_property"
          >
            <p
              class="grid-container__block_property_header"
            >
              Genre:
            </p>
            <p
              class="grid-container__block_property_value"
            >
              Fantasy
            </p>
          </div>
          <div
            class="grid-container__block_property"
          >
            <p
              class="grid-container__block_property_header"
            >
              Author:
            </p>
            <p
              class="grid-container__block_property_value"
            >
              Author1
            </p>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;
